<resources>
    <string name="app_name">TlaCRM</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="api">https://ev-server.ddns.net/api/tlacrm</string>
    <string name="host">https://ev-server.ddns.net</string>
    <string name="iniciando_sesi_n">Iniciando Sesión</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Buscar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Perfiles</string>

    <string name="app_label">Buscador</string>
    <string name="search_hint">Realiza tu busqueda</string>
    <string name="menu_clients">Clientes</string>
    <string name="title_activity_new_user">NewUserActivity</string>
</resources>
